@@ -1,7 +1,8 @@
 changes in 1.0
+    - resolved issue #19 "Clean up JCasFactory methods that have xmi file names as a parameter"
     - fixed issue #18 "support for different flow controllers in aggregate AEs"
 	- resolved issue #14 "move XWriter into uimaFIT from ClearTK"
-	- resolved issue #15 "move XWriter into uimaFIT from ClearTK"
+	- resolved issue #15 "Move Initializable interface to uimaFIT along with related UIMAUtil.create methods"
 
 changes in 0.9.13
 	- changed name from uutuc to uimaFIT - see issue #1 "moving uutuc to UimaFIT" (issue number corresponds to uimafit issues)
